<resources>
    <string name="app_name">Idun</string>
    <string name="Iduns_Introduction">Idun is known as the goddess of spring and fertility and is known as the \'Rejuvenating One.\' Due to being responsible for the gods\' and goddesses\' immortality, she is also associated with youthfulness. And her most significant symbol is her basket (in some tellings of the story, it is an ashwood box) of golden apples, which she is the guardian of, providing them to all the gods of Asgard.</string>
    <string name="inventory_button">Inventory</string>
    <string name="shopping_button">Shopping</string>
    <string name="ShoppingActivityTitle">ShoppingList</string>
    <string name="itemPlacedInShoppingList">Please fill both fields to add item.</string>
    <string name="idun_s_apples_title_text">Idun\'s Apples</string>
    <string name="placeholder_text_for_listview">Placeholder title</string>
    <string name="placeholder_number_for_listview">0</string>
    <string name="click_to_delete_item">Click an item to delete from The inventory</string>
    <string name="chat_btn_send">Send</string>
    <string name="ET_ChatMessage">Type a message...</string>
    <string name="item_to_add_shopping">Item to add</string>
    <string name="amount_to_add_shopping">#</string>
    <string name="add_item_shopping_button">Add Item</string>
    <string name="remove_item_shopping_button">Remove item</string>
    <string name="messenger_btn_main">Messenger</string>
    <string name="inventory_btn_main">Inventory</string>
    <string name="shopping_btn_main">Shopping List</string>
    <string name="amount_to_add_inventory">#</string>
    <string name="item_to_add_inventory">Item to add to cart</string>
    <string name="inventory_title">Inventory</string>
    <string name="add_to_inventory_btn">Add to inventory</string>
    <string name="btn_addnote">Add Note</string>
    <string name="btn_notepad_main">Notepad</string>
    <string name="btn_removenote">Remove note</string>
    <string name="notepad_title">Notepad</string>
    <string name="enter_note_title">Note Title</string>
    <string name="enter_note_bread">Note details</string>
    <string name="save_error_message">Add title to continue</string>

</resources>