<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="3dp"
    android:background="@color/fui_bgGitHub"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/idun_s_apples_title_text"
        android:textColor="@color/dark_white"
        android:textSize="35sp"
        android:padding="@dimen/padding_10dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView

        android:id="@+id/tv_Intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="404dp"
        android:gravity="center"
        android:padding="@dimen/padding_10dp"
        android:text="@string/Iduns_Introduction"
        android:textColor="@color/dark_white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="14dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck" />


    <Button
        android:id="@+id/btn_shopping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="348dp"
        android:background="@drawable/btn_main"
        android:text="@string/shopping_btn_main"
        android:textColor="@color/white"
        android:padding="@dimen/padding_10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Intro" />

    <Button
        android:id="@+id/btn_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="348dp"
        android:background="@drawable/btn_main"
        android:text="@string/messenger_btn_main"
        android:textColor="@color/white"
        android:padding="@dimen/padding_10dp"

        app:layout_constraintEnd_toStartOf="@+id/btn_inventory"
        app:layout_constraintHorizontal_bias="0.427"
        app:layout_constraintStart_toEndOf="@+id/btn_shopping"
        app:layout_constraintTop_toBottomOf="@+id/tv_Intro" />

    <Button
        android:id="@+id/btn_inventory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="348dp"
        android:background="@drawable/btn_main"
        android:padding="@dimen/padding_10dp"
        android:text="@string/inventory_btn_main"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/btn_shopping"
        app:layout_constraintTop_toBottomOf="@+id/tv_Intro" />

</androidx.constraintlayout.widget.ConstraintLayout>